hphp/hack/test/typecheck/async_function_untyped5.php.exp
File "async_function_untyped5.php", line 4, characters 25-25:
Was expecting a return type hint (Typing[4030])
File "async_function_untyped5.php", line 8, characters 19-19:
The method `f` is not compatible with the overridden method (Typing[4341])
  File "async_function_untyped5.php", line 8, characters 19-19:
  Method `f` has type `(function(): int)` in `C2`
  File "async_function_untyped5.php", line 4, characters 25-25:
  But is has type `(async function(): Awaitable<_>)` in parent `C1`
  File "async_function_untyped5.php", line 8, characters 19-19:
  Type `(function(): int)` is not a subtype of `(async function(): Awaitable<_>)`
  File "async_function_untyped5.php", line 4, characters 25-25:
  Expected `Awaitable<_>` (result of an `async` function)
  File "async_function_untyped5.php", line 8, characters 24-26:
  But got `int`
File "async_function_untyped5.php", line 8, characters 19-19:
The method `f` is not compatible with the overridden method (Typing[4341])
  File "async_function_untyped5.php", line 8, characters 19-19:
  You cannot override this method with a non-async method
  File "async_function_untyped5.php", line 4, characters 25-25:
  It was declared as async
